k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgrid-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgrid-backend
  template:
    metadata:
      labels:
        app: microgrid-backend
    spec:
      containers:
        - name: microgrid-backend
          image: emp79/microgrid-backend:26
          ports:
            - containerPort: 8011
